k8schart/templates/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app
spec:
  selector:
    app: nodejs-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
