k8schart/templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: 172.20.1.1
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
